httpServer/istio/Gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
      - *
      port:
        name: http
        number: 80
        protocol: HTTP
